Fri May 12 17:48:17 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/generate_export_file.pl:
          
          Found a new way to write this script using map and a __DATA__
          block.

Fri May 12 17:52:22 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/OS.cpp (ACE_Thread_Adapter::invoke): Reverted James'
	  previous change for now.  It's causing problem with MSVC.

Fri May 12 15:04:58 2000  Carlos O'Ryan  <coryan@uci.edu>

	* bin/run_all_list.pm:
	* bin/auto_compile_win32.pl:
	  Updated to include the new TAO test.

Fri May 12 11:25:10 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/Basic_Types.h:

          Didn't understand at first why ACE_SIZEOF_WCHAR wasn't
          defined to just "sizeof (wchar_t)".  So I changed it, but
          now I realize that this will not work if ACE_SIZEOF_WCHAR
          is used in a #if.  Bleh.  Since wchar_t is always different,
          I just defined it as 2 for WIN32 and 0 for others (so the
          tests/Basic_Types_Test will catch it). [Bug 560]

        * ace/ACE.cpp:

          Chris Kohlhoff <chris@kohlhoff.com> reported that Borland
          didn't like "sizeof wchar_t", but adding parenthesis worked.
          Applied this patch, and changed the cast to an ACE_static_cast.
          [Bug 560]

        * ace/High_Res_Timer.cpp:

          Borland was giving some warnings here since a const method
          was calling this->global_scale_factor (), which is a static
          method.  Changed it to ACE_High_Res_Timer::global_scale_factor ()
          and things compiled cleanly.

        * ace/config-win32-borland.h:
        * ace/README:
        * ace/SString.cpp:
        * ace/SString.h:
        * ace/Local_Name_Space_T.cpp:
        * ace/Remote_Name_Space.cpp:
        * netsvcs/lib/Name_Handler.cpp:

          On Borland BCB 5, wchar_t is (correctly) a separate type than
          unsigned short, so all the implicit casting between the two in